[package]
name = "pv_inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
k8s-openapi = { version = "0.22.0", features = ["v1_25"] }
kube = { version = "0.91.0", features = ["runtime", "derive", "ws"] }
log = "0.4.21"
serde_yaml = "0.9.34"
tabled = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
incremental = true
lto = "off"
