[package]
name = "pv_inspect"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["v1_25"] }
kube = { version = "0.91.0", features = ["runtime", "derive", "ws"] }
log = "0.4.21"
rand_core = "0.6.4"
serde_yaml = "0.9.34"
ssh-key = { version = "0.6.6", features = ["ed25519"] }
tabled = "0.15.0"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"

[profile.release]
incremental = true
lto = "off"
